--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
             <!-- Social -->
             <div class="header_social">
                 <ul>
-                    <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+                    <!-- <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li> -->
                     <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                    <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
                 </ul>
             </div>
         </header>
@@ -176,92 +176,11 @@
 
         <!-- Home -->
 
-        <div class="home">
-            <div class="home_slider_container">
 
-                <!-- Home Slider -->
-                <div class="owl-carousel owl-theme home_slider">
-
-                    <!-- Slider Item -->
-                    <div class="owl-item home_slider_item">
-                        <div class="home_slider_background" style="background-image:url(images/home_slider_1.jpg)"></div>
-                        <div class="home_slider_content_container">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="home_slider_content" data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
-                                            <div class="home_slider_title">A new Online Shop experience.</div>
-                                            <div class="home_slider_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</div>
-                                            <div class="button button_light home_button"><a href="#">Shop Now</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Slider Item -->
-                    <div class="owl-item home_slider_item">
-                        <div class="home_slider_background" style="background-image:url(images/home_slider_1.jpg)"></div>
-                        <div class="home_slider_content_container">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="home_slider_content" data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
-                                            <div class="home_slider_title">A new Online Shop experience.</div>
-                                            <div class="home_slider_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</div>
-                                            <div class="button button_light home_button"><a href="#">Shop Now</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Slider Item -->
-                    <div class="owl-item home_slider_item">
-                        <div class="home_slider_background" style="background-image:url(images/home_slider_1.jpg)"></div>
-                        <div class="home_slider_content_container">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="home_slider_content" data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
-                                            <div class="home_slider_title">A new Online Shop experience.</div>
-                                            <div class="home_slider_subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie eros. Sed viverra velit venenatis fermentum luctus.</div>
-                                            <div class="button button_light home_button"><a href="#">Shop Now</a></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <!-- Home Slider Dots -->
-
-                <div class="home_slider_dots_container">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col">
-                                <div class="home_slider_dots">
-                                    <ul id="home_slider_custom_dots" class="home_slider_custom_dots">
-                                        <li class="home_slider_custom_dot active">01.</li>
-                                        <li class="home_slider_custom_dot">02.</li>
-                                        <li class="home_slider_custom_dot">03.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
 
         <!-- Ads -->
 
-        <div class="avds">
+        <!-- <div class="avds">
             <div class="avds_container d-flex flex-lg-row flex-column align-items-start justify-content-between">
                 <div class="avds_small">
                     <div class="avds_background" style="background-image:url(images/avds_small.jpg)"></div>
@@ -292,7 +211,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Products -->
 
@@ -415,20 +334,20 @@
                     <div class="col-lg-4 icon_box_col">
                         <div class="icon_box">
                             <div class="icon_box_image"><img src="images/icon_1.svg" alt=""></div>
-                            <div class="icon_box_title">Free Shipping Worldwide</div>
+                            <div class="icon_box_title">Shipping around KU</div>
                             <div class="icon_box_text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie.</p>
+                                <p>Vyandol to Bakundol we got you covered, at a minimum Rs 20 per delivery</p>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Icon Box -->
+                    <!-- Upload Icon Box -->
                     <div class="col-lg-4 icon_box_col">
                         <div class="icon_box">
-                            <div class="icon_box_image"><img src="images/icon_2.svg" alt=""></div>
-                            <div class="icon_box_title">Free Returns</div>
+                            <div class="icon_box_image"><img src="images/upload.svg" alt=""></div>
+                            <div class="icon_box_title">Have something to sell?</div>
                             <div class="icon_box_text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie.</p>
+                                <p>Send your products and get your product sold on the website</p>
                             </div>
                         </div>
                     </div>
@@ -437,9 +356,9 @@
                     <div class="col-lg-4 icon_box_col">
                         <div class="icon_box">
                             <div class="icon_box_image"><img src="images/icon_3.svg" alt=""></div>
-                            <div class="icon_box_title">24h Fast Support</div>
+                            <div class="icon_box_title">Customer Support</div>
                             <div class="icon_box_text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam a ultricies metus. Sed nec molestie.</p>
+                                <p>Have something to ask?</p>
                             </div>
                         </div>
                     </div>
@@ -450,7 +369,7 @@
 
         <!-- Newsletter -->
 
-        <div class="newsletter">
+        <!-- <div class="newsletter">
             <div class="container">
                 <div class="row">
                     <div class="col">
@@ -474,39 +393,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Footer -->
 
         <div class="footer_overlay"></div>
-        <footer class="footer">
-            <div class="footer_background" style="background-image:url(images/footer.jpg)"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
-                            <div class="footer_logo"><a href="#">Sublime.</a></div>
-                            <div class="copyright ml-auto mr-auto">
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                Copyright &copy;
-                                <script>
-                                    document.write(new Date().getFullYear());
-                                </script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </div>
-                            <div class="footer_social ml-lg-auto">
-                                <ul>
-                                    <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </footer>
+
     </div>
 
     <script src="js/jquery-3.2.1.min.js"></script>
